--- a/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
@@ -60,331 +60,6 @@ If you are upgrading from React 17 or lower, make sure to [learn about how to up
 - [Upgrading from 12 to 13](https://nextjs.org/docs/pages/building-your-application/upgrading/version-13)
 - [Upgrading from 13 to 14](https://nextjs.org/docs/app/building-your-application/upgrading/version-14)
 
-## New Middleware architecture
-
-We have been actively fielding user and customer feedback about `authMiddleware()` and have heard from many that this was a friction point. As such, in v5 we are releasing a completely new middleware helper called [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) that we think will alleviate all of the issues folks had with `authMiddleware()`.
-
-Additionally, we have added new helpers that enable controlling auth on a _per-page and/or per-layout basis_. While you can still configure which routes are protected via middleware, the page-based protection strategy is what we now recommend, as we feel the co-location of auth protection configuration with the code for the pages themselves results in a superior developer experience that adds clarity as you navigate your codebase.
-
-### Per-route auth config
-
-Sometimes, code speaks louder than words. Let's get right into an example:
-
-```ts filename="app/src/dashboard/layout.tsx"
-import { auth } from '@clerk/nextjs/server'
-
-export default async function DashboardLayout({ children }) {
-    auth().protect();
-    // 👆 This one line is all it takes - the layout and all its children
-    // will now redirect to your sign in page for un-authenticated users.
-
-    return <>{children}</>
-}
-```
-
-In this example, we add `auth().protect()` to a layout, and like magic, that layout and all of it's children will be gated by auth.
-
-Want to get more specific with permission gating? It's just as simple:
-
-```ts filename="app/src/admin/layout.tsx"
-import { auth } from '@clerk/nextjs/server'
-
-export default async function AdminLayout({ children }) {
-    auth().protect({ role: 'org:admin' });
-
-    return <>{children}</>
-}
-```
-
-Note that in order for this to work, you will still need middleware to be present, but it only requires the most minimal configuration:
-
-```ts filename="middleware.ts"
-import { clerkMiddleware } from '@clerk/nextjs/server'
- 
-export default clerkMiddleware()
- 
-export const config = {
-  matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
-}
-```
-
-### Middleware auth config
-
-If you'd still prefer to define your auth logic within the middleware, we support this fully as well, and have put a lot of work into improving the ergonomics as well. The primary change was to make `clerkMiddleware()` not protect any routes by default, instead requiring the developer to add routes they would like to be protected by auth. This is a substantial contrast to the previous `authMiddleware()`, which protected all routes by default, requiring the developer to add exceptions. We have also made efforts to substantially simplify the API and make it easier to combine with other middleware helpers smoothly.
-
-Here's an example that replicates the auth protection scheme above, but entirely inside the middleware:
-
-```ts filename="middleware.ts"
-import {
-  clerkMiddleware,
-  createRouteMatcher,
-} from "@clerk/nextjs/server"
- 
-const isDashboardRoute = createRouteMatcher(["/dashboard(.*)"])
-const isAdminRoute = createRouteMatcher(["/admin"])
- 
-export default clerkMiddleware((auth, req) => {
-  // Restrict admin route to users with specific role
-  if (isAdminRoute(req)) auth().protect((has) => has({ role: "org:admin" }))
-
-  // Restrict dashboard routes to logged in users
-  if (isDashboardRoute(req)) auth().protect()
-})
- 
-export const config = {
-  matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
-}
-```
-
-A couple things to note here:
-
-- The `createRouteMatcher` helper makes it easy to define route groups that you can leverage inside the middleware function and check in whichever order you'd like. Note that it can take an array of routes as well.
-- With `clerkMiddleware`, we are defining the routes we want **to be protected**, rather than the routes we don't want to be protected.
-- We are able to use the same `auth().protect()` helpers that we can use within layouts/pages here in the middleware.
-
-### Migrating to `clerkMiddleware()`
-
-We strongly recommend migrating to the new `clerkMiddleware()` for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your middleware setup this version.
-
-The most basic migration will be updating the import and changing out the default export.
-
-```diff
-- import { authMiddleware } from "@clerk/nextjs"
-+ import { clerkMiddleware } from '@clerk/nextjs/server'
-
-- export default authMiddleware()
-+ export default clerkMiddleware()
-
-  export const config = {
-    matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
-  }
-```
-
-Of course, in most cases you'll have a more complicated setup than this. You can find some examples below for how to migrate a few common use cases. Be sure to review the [`clerkMiddleware()` documentation](/docs/references/nextjs/clerk-middleware) and [route protection guide](/docs/references/nextjs/route-protection) if your specific use case is not mentioned.
-
-<Accordion titles={["Making the index page public", "Protecting a single route path", "Combining with other middlewares (like i18n)"]} heading="h4">
-  <AccordionPanel>
-    By default, `clerkMiddleware()` treats all pages as public, so you no longer need to explcitly set `/` as public.
-
-    Before:
-
-    ```ts filename="middleware.ts"
-    import { authMiddleware } from "@clerk/nextjs"
-
-    export default authMiddleware({
-      publicRoutes: ["/"],
-    })
-
-    export const config = {
-      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
-    }
-    ```
-
-    After:
-
-    ```ts filename="middleware.ts"
-    import {
-      clerkMiddleware,
-      createRouteMatcher
-    } from "@clerk/nextjs/server"
-
-    export default clerkMiddleware()
-
-    export const config = {
-      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
-    }
-    ```
-  </AccordionPanel>
-  <AccordionPanel>
-    Having all routes public except everything under `/dashboard`.
-
-    Before:
-
-    ```ts filename="middleware.ts"
-    import { authMiddleware } from "@clerk/nextjs"
-
-    export default authMiddleware({
-      publicRoutes: (req) => !req.url.includes("/dashboard"),
-    })
-
-    export const config = {
-      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
-    }
-    ```
-
-    After:
-
-    ```ts filename="middleware.ts"
-    import {
-      clerkMiddleware,
-      createRouteMatcher
-    } from "@clerk/nextjs/server"
-
-    const isDashboardRoute = createRouteMatcher(["/dashboard(.*)"])
-
-    export default clerkMiddleware((auth, request) => {
-      if (isDashboardRoute(request)) {
-        auth().protect()
-      }
-    })
-
-    export const config = {
-      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
-    }
-    ```
-  </AccordionPanel>
-  <AccordionPanel>
-    You can call other middlewares inside `clerkMiddleware()`, giving you more direct control over what is called where. An example would be [next-intl](https://next-intl-docs.vercel.app/) to add internationalization to your app.
-
-    Before:
-
-    ```ts filename="middleware.ts"
-    import { authMiddleware } from "@clerk/nextjs"
-    import createMiddleware from "next-intl/middleware"
-
-    const intlMiddleware = createMiddleware({
-      locales: ["en", "de"],
-      defaultLocale: "en",
-    })
-
-    export default authMiddleware({
-      beforeAuth: (req) => {
-        return intlMiddleware(req);
-      },
-      publicRoutes: ["((?!^/dashboard/).*)"],
-    })
-
-    export const config = {
-      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
-    }
-    ```
-
-    After:
-
-    ```ts filename="middleware.ts"
-    import {
-      clerkMiddleware,
-      createRouteMatcher
-    } from "@clerk/nextjs/server"
-    import createMiddleware from "next-intl/middleware"
-
-    const intlMiddleware = createMiddleware({
-      locales: ["en", "de"],
-      defaultLocale: "en",
-    })
-
-    const isDashboardRoute = createRouteMatcher(["/dashboard(.*)"])
-
-    export default clerkMiddleware((auth, request) => {
-      if (isDashboardRoute(request)) {
-        auth().protect()
-      }
-
-      return intlMiddleware(request)
-    })
-
-    export const config = {
-      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
-    }
-    ```
-  </AccordionPanel>
-</Accordion>
-
-
-## Changes to top level exports
-
-As part of this release, we changed some of the top-level exports of `@clerk/nextjs` in order to improve bundle size and tree-shaking efficiency. These changes have resulted in a ~75% reduction in build size for middleware bundles. However, you will likely need to make some changes to import paths as a result.
-
-<Callout type="info" >
-  We recommend using our CLI tool, `npx @clerk/upgrade`, to automatically find occurences of old imports.
-</Callout>
-
-<Accordion titles={["@clerk/nextjs/server", "@clerk/nextjs/errors", "@clerk/nextjs/app-beta", "@clerk/nextjs/ssr", "@clerk/nextjs/edge-middleware", "@clerk/nextjs/edge-middlewarefiles", "@clerk/nextjs/api"]} heading="h4">
-  <AccordionPanel>
-    Previously these exports have been exported both from `@clerk/nextjs` and `@clerk/nextjs/server`. As of v5 they are only exported from the latter.
-
-    ```diff
-      import {
-        auth,
-        currentUser,
-        authMiddleware,
-        buildClerkProps,
-        verifyToken,
-        verifyJwt,
-        decodeJwt,
-        signJwt,
-        constants,
-        redirect,
-        createAuthenticateRequest,
-        createIsomorphicRequest,
-    - } from "@clerk/nextjs"
-    + } from "@clerk/nextjs/server"
-    ```
-  </AccordionPanel>
-  <AccordionPanel>
-    Exports related to errors are now under `@clerk/nextjs/errors`.
-
-    ```diff
-      import {
-        isClerkAPIResponseError,
-        isEmailLinkError,
-        isKnownError,
-        isMetamaskError,
-        EmailLinkErrorCode,
-    - } from "@clerk/nextjs"
-    + } from "@clerk/nextjs/errors"
-    ```
-  </AccordionPanel>
-  <AccordionPanel>
-    The `@clerk/nextjs` import will work with both the app and pages router.
-
-    ```diff
-    - import { } from "@clerk/nextjs/app-beta"
-    + import { } from "@clerk/nextjs"
-    ```
-
-    Some behavior may have changed between Clerk's beta and the stable release. Please check on your end if behavior stayed the same.
-  </AccordionPanel>
-  <AccordionPanel>
-    The top-level exports support SSR by default now.
-
-    ```diff
-    - import { } from "@clerk/nextjs/ssr"
-    + import { } from "@clerk/nextjs"
-    ```
-  </AccordionPanel>
-  <AccordionPanel>
-    ```diff
-    - import { } from "@clerk/nextjs/edge-middleware"
-    + import { } from "@clerk/nextjs"
-    ```
-  </AccordionPanel>
-  <AccordionPanel>
-    ```diff
-    - import { } from "@clerk/nextjs/edge-middlewarefiles"
-    + import { } from "@clerk/nextjs"
-    ```
-  </AccordionPanel>
-  <AccordionPanel>
-    The `@clerk/nextjs/api` subpath was removed completely. It re-exported helpers from `@clerk/clerk-sdk-node` and its types. If you relied on these, import from `@clerk/clerk-sdk-node` directly instead.
-
-    ```diff
-      import type {
-        ClerkMiddleware,
-        ClerkMiddlewareOptions,
-        LooseAuthProp,
-        RequireAuthProp,
-        StrictAuthProp,
-        WithAuthProp
-    - } from "@clerk/nextjs/api"
-    + } from "@clerk/clerk-sdk-node"
-
-    - import { requireAuth, withAuth } from "@clerk/nextjs/api"
-    + import { requireAuth, withAuth } from "@clerk/clerk-sdk-node"
-    ```
-  </AccordionPanel>
-</Accordion>
-
 ## Redesigned components
 
 The new version ships with improved design and UX across all of Clerk's [UI components](/docs/components/overview). If you have used the [`appearance` prop](/docs/components/customization/overview) or tokens for a [custom theme](/docs/components/customization/overview#create-a-custom-theme), you will likely need to make some adjustments to ensure your styling is still looking great. If you're using the [localization prop](/docs/components/customization/localization) you will likely need to make adjustments to account for added or removed localization keys.
@@ -814,6 +489,361 @@ const changedValues = {
 ```
 </AccordionPanel></Accordion>
 
+## New middleware architecture
+
+User and customer feedback about `authMiddleware()` has been clear in that middleware logic was a often friction point. As such, in v5 you will find a completely new middleware helper called [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) that will hopefully alleviate all of the issues folks had with `authMiddleware()`.
+
+Additionally, there are now new helpers that enable controlling auth on a _per-page and/or per-layout basis_ when using app router. While you can still configure which routes are protected via middleware, the page-based protection strategy is what is now recommended, as the co-location of auth protection configuration with the code for the pages themselves results in a superior developer experience that adds clarity as you navigate your codebase.
+
+### Per-route auth config
+
+Sometimes, code speaks louder than words. Let's get right into an example:
+
+<Tabs type="auth-protect-layout-page" items={["Layout", "Page"]}>
+<Tab>
+```ts filename="app/src/dashboard/layout.tsx"
+import { auth } from '@clerk/nextjs/server'
+
+export default async function DashboardLayout({ children }) {
+    auth().protect();
+    // 👆 This one line is all it takes - the layout and all its children
+    // will now redirect to your sign in page for un-authenticated users.
+
+    return <>{children}</>
+}
+```
+</Tab>
+<Tab>
+```ts filename="app/src/dashboard/page.tsx"
+import { auth } from '@clerk/nextjs/server'
+
+export default async function DashboardPage() {
+    auth().protect();
+    // 👆 This one line is all it takes - the layout and all its children
+    // will now redirect to your sign in page for un-authenticated users.
+
+    return <p>This page is now protected!</p>
+}
+```
+</Tab>
+</Tabs>
+
+In this example, we add `auth().protect()` to a layout, and like magic, that layout and all of it's children will be gated by auth.
+
+Want to get more specific with permission gating? Just add the role you are gating as a param:
+
+```ts filename="app/src/admin/layout.tsx"
+import { auth } from '@clerk/nextjs/server'
+
+export default async function AdminLayout({ children }) {
+    auth().protect({ role: 'org:admin' });
+
+    return <>{children}</>
+}
+```
+
+Note that in order for this to work, you will still need middleware to be present, but it only requires the most minimal configuration:
+
+```ts filename="middleware.ts"
+import { clerkMiddleware } from '@clerk/nextjs/server'
+ 
+export default clerkMiddleware()
+ 
+export const config = {
+  matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
+}
+```
+
+If you are using the pages router, we recommend middleware auth config as seen below.
+
+### Middleware auth config
+
+If you'd still prefer to define your auth logic within the middleware, we support this fully as well, and have put a lot of work into improving the ergonomics as well. The primary change was to make `clerkMiddleware()` not protect any routes by default, instead requiring the developer to add routes they would like to be protected by auth. This is a substantial contrast to the previous `authMiddleware()`, which protected all routes by default, requiring the developer to add exceptions. We have also made efforts to substantially simplify the API and make it easier to combine with other middleware helpers smoothly.
+
+Here's an example that replicates the auth protection scheme above, but entirely inside the middleware:
+
+```ts filename="middleware.ts"
+import {
+  clerkMiddleware,
+  createRouteMatcher,
+} from "@clerk/nextjs/server"
+ 
+const isDashboardRoute = createRouteMatcher(["/dashboard(.*)"])
+const isAdminRoute = createRouteMatcher(["/admin"])
+ 
+export default clerkMiddleware((auth, req) => {
+  // Restrict admin route to users with specific role
+  if (isAdminRoute(req)) auth().protect({ role: "org:admin" })
+
+  // Restrict dashboard routes to logged in users
+  if (isDashboardRoute(req)) auth().protect()
+})
+ 
+export const config = {
+  matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
+}
+```
+
+A couple things to note here:
+
+- The `createRouteMatcher` helper makes it easy to define route groups that you can leverage inside the middleware function and check in whichever order you'd like. Note that it can take an array of routes as well.
+- With `clerkMiddleware`, we are defining the routes we want **to be protected**, rather than the routes we don't want to be protected.
+- We are able to use the same `auth().protect()` helpers that we can use within layouts/pages here in the middleware.
+
+### Migrating to `clerkMiddleware()`
+
+We strongly recommend migrating to the new `clerkMiddleware()` for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your middleware setup this version.
+
+The most basic migration will be updating the import and changing out the default export.
+
+```diff
+- import { authMiddleware } from "@clerk/nextjs"
++ import { clerkMiddleware } from '@clerk/nextjs/server'
+
+- export default authMiddleware()
++ export default clerkMiddleware()
+
+  export const config = {
+    matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
+  }
+```
+
+Of course, in most cases you'll have a more complicated setup than this. You can find some examples below for how to migrate a few common use cases. Be sure to review the [`clerkMiddleware()` documentation](/docs/references/nextjs/clerk-middleware) and [route protection guide](/docs/references/nextjs/route-protection) if your specific use case is not mentioned.
+
+<Accordion titles={["Making the index page public", "Protecting a single route path", "Combining with other middlewares (like i18n)"]} heading="h4">
+  <AccordionPanel>
+    By default, `clerkMiddleware()` treats all pages as public, so you no longer need to explcitly set `/` as public.
+
+    Before:
+
+    ```ts filename="middleware.ts"
+    import { authMiddleware } from "@clerk/nextjs"
+
+    export default authMiddleware({
+      publicRoutes: ["/"],
+    })
+
+    export const config = {
+      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+    }
+    ```
+
+    After:
+
+    ```ts filename="middleware.ts"
+    import {
+      clerkMiddleware,
+      createRouteMatcher
+    } from "@clerk/nextjs/server"
+
+    export default clerkMiddleware()
+
+    export const config = {
+      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+    }
+    ```
+  </AccordionPanel>
+  <AccordionPanel>
+    Having all routes public except everything under `/dashboard`.
+
+    Before:
+
+    ```ts filename="middleware.ts"
+    import { authMiddleware } from "@clerk/nextjs"
+
+    export default authMiddleware({
+      publicRoutes: (req) => !req.url.includes("/dashboard"),
+    })
+
+    export const config = {
+      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+    }
+    ```
+
+    After:
+
+    ```ts filename="middleware.ts"
+    import {
+      clerkMiddleware,
+      createRouteMatcher
+    } from "@clerk/nextjs/server"
+
+    const isDashboardRoute = createRouteMatcher(["/dashboard(.*)"])
+
+    export default clerkMiddleware((auth, request) => {
+      if (isDashboardRoute(request)) {
+        auth().protect()
+      }
+    })
+
+    export const config = {
+      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+    }
+    ```
+  </AccordionPanel>
+  <AccordionPanel>
+    You can call other middlewares inside `clerkMiddleware()`, giving you more direct control over what is called where. An example would be [next-intl](https://next-intl-docs.vercel.app/) to add internationalization to your app.
+
+    Before:
+
+    ```ts filename="middleware.ts"
+    import { authMiddleware } from "@clerk/nextjs"
+    import createMiddleware from "next-intl/middleware"
+
+    const intlMiddleware = createMiddleware({
+      locales: ["en", "de"],
+      defaultLocale: "en",
+    })
+
+    export default authMiddleware({
+      beforeAuth: (req) => {
+        return intlMiddleware(req);
+      },
+      publicRoutes: ["((?!^/dashboard/).*)"],
+    })
+
+    export const config = {
+      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+    }
+    ```
+
+    After:
+
+    ```ts filename="middleware.ts"
+    import {
+      clerkMiddleware,
+      createRouteMatcher
+    } from "@clerk/nextjs/server"
+    import createMiddleware from "next-intl/middleware"
+
+    const intlMiddleware = createMiddleware({
+      locales: ["en", "de"],
+      defaultLocale: "en",
+    })
+
+    const isDashboardRoute = createRouteMatcher(["/dashboard(.*)"])
+
+    export default clerkMiddleware((auth, request) => {
+      if (isDashboardRoute(request)) {
+        auth().protect()
+      }
+
+      return intlMiddleware(request)
+    })
+
+    export const config = {
+      matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+    }
+    ```
+  </AccordionPanel>
+</Accordion>
+
+
+## Changes to top level exports
+
+As part of this release, we changed some of the top-level exports of `@clerk/nextjs` in order to improve bundle size and tree-shaking efficiency. These changes have resulted in a ~75% reduction in build size for middleware bundles. However, you will likely need to make some changes to import paths as a result.
+
+<Callout type="info" >
+  We recommend using our CLI tool, `npx @clerk/upgrade`, to automatically find occurences of old imports.
+</Callout>
+
+<Accordion titles={["@clerk/nextjs/server", "@clerk/nextjs/errors", "@clerk/nextjs/app-beta", "@clerk/nextjs/ssr", "@clerk/nextjs/edge-middleware", "@clerk/nextjs/edge-middlewarefiles", "@clerk/nextjs/api"]} heading="h4">
+  <AccordionPanel>
+    Previously these exports have been exported both from `@clerk/nextjs` and `@clerk/nextjs/server`. As of v5 they are only exported from the latter.
+
+    ```diff
+      import {
+        auth,
+        currentUser,
+        authMiddleware,
+        buildClerkProps,
+        verifyToken,
+        verifyJwt,
+        decodeJwt,
+        signJwt,
+        constants,
+        redirect,
+        createAuthenticateRequest,
+        createIsomorphicRequest,
+    - } from "@clerk/nextjs"
+    + } from "@clerk/nextjs/server"
+    ```
+  </AccordionPanel>
+  <AccordionPanel>
+    Exports related to errors are now under `@clerk/nextjs/errors`.
+
+    ```diff
+      import {
+        isClerkAPIResponseError,
+        isEmailLinkError,
+        isKnownError,
+        isMetamaskError,
+        EmailLinkErrorCode,
+    - } from "@clerk/nextjs"
+    + } from "@clerk/nextjs/errors"
+    ```
+  </AccordionPanel>
+  <AccordionPanel>
+    The `@clerk/nextjs` import will work with both the app and pages router.
+
+    ```diff
+    - import { } from "@clerk/nextjs/app-beta"
+    + import { } from "@clerk/nextjs"
+    ```
+
+    Some behavior may have changed between Clerk's beta and the stable release. Please check on your end if behavior stayed the same.
+  </AccordionPanel>
+  <AccordionPanel>
+    The top-level exports support SSR by default now.
+
+    ```diff
+    - import { } from "@clerk/nextjs/ssr"
+    + import { } from "@clerk/nextjs"
+    ```
+  </AccordionPanel>
+  <AccordionPanel>
+    ```diff
+    - import { } from "@clerk/nextjs/edge-middleware"
+    + import { } from "@clerk/nextjs"
+    ```
+  </AccordionPanel>
+  <AccordionPanel>
+    ```diff
+    - import { } from "@clerk/nextjs/edge-middlewarefiles"
+    + import { } from "@clerk/nextjs"
+    ```
+  </AccordionPanel>
+  <AccordionPanel>
+    The `@clerk/nextjs/api` subpath was removed completely. It re-exported helpers from `@clerk/clerk-sdk-node` and its types. If you relied on these, import from `@clerk/clerk-sdk-node` directly instead.
+
+    ```diff
+      import type {
+        ClerkMiddleware,
+        ClerkMiddlewareOptions,
+        LooseAuthProp,
+        RequireAuthProp,
+        StrictAuthProp,
+        WithAuthProp
+    - } from "@clerk/nextjs/api"
+    + } from "@clerk/clerk-sdk-node"
+
+    - import { requireAuth, withAuth } from "@clerk/nextjs/api"
+    + import { requireAuth, withAuth } from "@clerk/clerk-sdk-node"
+    ```
+  </AccordionPanel>
+</Accordion>
+
+## After sign up/in/out URL handling
+
+Defining redirect URLs for after sign up, in, and/or out via the Clerk dashboard has been removed in v5. In your Clerk dashboard, under "paths", there is a section called "Component paths", where URLs could be defined that had a deprecation warning. In v5, this functionality has been removed, and specifying redirect paths via the dashboard will no longer work. If you need to pass a redirect URL for after sign in/up/out, there are [a few different ways this can be done](https://clerk.com/docs/account-portal/custom-redirects), from environment variables to middleware to supplying them directly to the relevant components.
+
+As part of this change, the default URL for each of these props has been set to `/`, so if you are passing `/` explicitly to any one of the above props, that line is no longer necessary and can be removed.
+
+```diff
+- <UserButton afterSignOutUrl='/' />
++ <UserButton />
+```
+
 ## Deprecation removals & housekeeping
 
 As part of this major version, we have removed a large number of previously deprecated props, arugments, methods, etc, and made changes to things that are only realistically used internally, or only used very rarely. It's highly unlikely that any given app will encounter any of these items, but they are all breaking changes, so they have all been documented below.
@@ -1079,7 +1109,7 @@ If you are using `NEXT_PUBLIC_CLERK_JS` as an environment variable, it should be
 
 #### Other breaking changes
 
-<Accordion titles={["<code>API_URL</code> value has changed", "<code>isMagicLinkError</code> -&gt; <code>isEmailLinkError</code>", "<code>useMagicLink</code> -&gt; <code>useEmailLink</code>", "<code>MagicLinkErrorCode</code> -&gt; <code>EmailLinkErrorCode</code>", "<code>setSession</code> -&gt; <code>setActive</code>", "<code>afterSignOutUrl</code> prop behavior change", "<code>afterSignInUrl</code> prop behavior change", "<code>afterSignUpUrl</code> prop behavior change", "Replace <code>signOutCallback</code> prop on <code>SignOutButton</code> with <code>redirectUrl</code>", "<code>Organization.getOrganizationList()</code> return type changed", "<code>Organization.getOrganizationInvitationList()</code> return type changed", "<code>User.getOrganizationMembershipList()</code> return type changed", "<code>Organization.getRoles</code> arguments changed", "<code>Organization.getMemberships</code> arguments changed", "<code>Organization.getDomains</code> arguments changed", "<code>Organization.getInvitations</code> arguments changed", "<code>Organization.getMembershipRequests</code> arguments changed", "<code>User.getOrganizationInvitations</code> arguments changed", "<code>User.getOrganizationSuggestions</code> arguments changed", "<code>User.getOrganizationMemberships</code> arguments changed"]}>
+<Accordion titles={["<code>API_URL</code> value has changed", "<code>isMagicLinkError</code> -&gt; <code>isEmailLinkError</code>", "<code>useMagicLink</code> -&gt; <code>useEmailLink</code>", "<code>MagicLinkErrorCode</code> -&gt; <code>EmailLinkErrorCode</code>", "<code>setSession</code> -&gt; <code>setActive</code>", "Replace <code>signOutCallback</code> prop on <code>SignOutButton</code> with <code>redirectUrl</code>", "<code>Organization.getOrganizationList()</code> return type changed", "<code>Organization.getOrganizationInvitationList()</code> return type changed", "<code>User.getOrganizationMembershipList()</code> return type changed", "<code>Organization.getRoles</code> arguments changed", "<code>Organization.getMemberships</code> arguments changed", "<code>Organization.getDomains</code> arguments changed", "<code>Organization.getInvitations</code> arguments changed", "<code>Organization.getMembershipRequests</code> arguments changed", "<code>User.getOrganizationInvitations</code> arguments changed", "<code>User.getOrganizationSuggestions</code> arguments changed", "<code>User.getOrganizationMemberships</code> arguments changed"]}>
 <AccordionPanel>
 The value of this export has changed from `https://api.clerk.dev` to `https://api.clerk.com`. If you were relying on the text content of this value not changing, you may need to make adjustments.
 </AccordionPanel>
@@ -1121,15 +1151,6 @@ await setActive({
   beforeEmit: () => void
 })
 ```
-</AccordionPanel>
-<AccordionPanel>
-The default value of `afterSignOutUrl` has been changed to `/`. The URLs defined in your `Dashboard > Account Portal > Redirects` section will no longer affect these values. Read the [Customizing your Account Portal redirects](https://clerk.com/docs/account-portal/custom-redirects) guide to learn how to override these defaults. If you are setting the value to `/`, you can remove the prop entirely.
-</AccordionPanel>
-<AccordionPanel>
-The default value of `afterSignInUrl` has been changed to `/`. The URLs defined in your `Dashboard > Account Portal > Redirects` section will no longer affect these values. Read the [Customizing your Account Portal redirects](https://clerk.com/docs/account-portal/custom-redirects) guide to learn how to override these defaults.
-</AccordionPanel>
-<AccordionPanel>
-The default value of `afterSignUpUrl` has been changed to `/`. The URLs defined in your `Dashboard > Account Portal > Redirects` section will no longer affect these values. Read the [Customizing your Account Portal redirects](https://clerk.com/docs/account-portal/custom-redirects) guide to learn how to override these defaults.
 </AccordionPanel>
 <AccordionPanel>
 The `signOutCallback` prop on the [`<SignOutButton />` component](https://clerk.com/docs/components/unstyled/sign-out-button) has been removed. Instead, you can use the `redirectUrl` prop. Example below:
@@ -1278,3 +1299,5 @@ There have been a couple changes to the pagination arguments that can be passed 
   })
 ```
 </AccordionPanel></Accordion>
+
+
