--- a/docs/custom-flows/overview.mdx
+++ b/docs/custom-flows/overview.mdx
@@ -3,11 +3,18 @@ title: Custom flows
 description: Learn the process behind building custom sign-up and sign-in flows with Clerk.
 ---
 
-# Custom flows
+# Building your custom UI with Clerk Hooks
 
 A *custom flow* refers to a user flow created entirely from scratch using the Clerk API. If Clerk's [prebuilt components](/docs/components/overview) don't meet your specific needs or if you require more control over the logic, you can rebuild the existing Clerk flows using the Clerk API.
 
-## Sign-up flow
+
+## Authentication UI
+
+You can build custom sign up and sign in components, or even create a combined ui.
+
+### Sign-up flow
+
+pYou can build your custom sign up component using the [useSignUp()](/docs/references/react/use-sign-up) hook. The `useSignUp()` hook enables you to build UI to handle any of the sign up methods Clerk offers.
 
 Clerk provides a flexible way to build sign-up flows in your application. You can use a single [`SignUp`][sign-up-ref] object to gather information, verify their email address or phone number, add OAuth accounts, and finally, convert them into a [`User`][user-ref].
 
@@ -15,52 +22,43 @@ Every [`SignUp`][sign-up-ref] has a set of requirements it must meet before it i
 
 Don't worry about collecting all the required fields at once and passing them to a single request. The API is designed to accommodate a progressive sign-up flow, often corresponding to multi-step sign-up forms.
 
-### Required fields
+### Sign-in flow
 
-The [`SignUp`][sign-up-ref] object will show the state of the current sign-up. You can consult the `required_fields`, `optional_fields`, and `missing_fields` keys for a hint on where things are and what you need to do next.
-
-| Name | Description |
-| --- | --- |
-| `requiredFields` | All fields that must be collected before the [`SignUp`][sign-up-ref] converts into a [`User`][user-ref]. |
-| `optionalFields` | All fields that can be collected, but are not necessary to convert the [`SignUp`][sign-up-ref]. |
-| `missing_fields` | A subset of `required_fields`. It contains all fields that still need to be collected before a successful [`SignUp`][sign-up-ref]. Note that the `missingFields` will be updated dynamically. As you add more fields to the [`SignUp`][sign-up-ref], they will be removed from `missing_fields`. Once it's empty, your [`SignUp`][sign-up-ref] will automatically convert into a [`User`][user-ref]. |
-
-The values of the collected fields are all accessible on the root of the [`SignUp`][sign-up-ref], under their corresponding keys; `email_address` and `phone_number` are examples of such keys. Go to the [`SignUp` object documentiation][sign-up-ref] for a list of all available attributes.
-
-### Verified fields
-
-Some fields, such as `email_address` and `phone_number`, must be verified before they are fully added to the [`SignUp`][sign-up-ref]. Similar to what happens with required fields, the [`SignUp`][sign-up-ref] contains the current state of all verified fields. The keys relative to verification are `unverified_fields` and `verifications`.
-
-| Name | Description |
-| --- | --- |
-| `unverifiedFields` | A list of all [`User`][user-ref] attributes that need to be verified and are pending verification. This is a list that gets updated dynamically. When verification for all required fields has been successfully completed, this value will become an empty array. |
-| `verifications` | An object that describes the current state of verification for the [`SignUp`][sign-up-ref]. There are currently three different keys: `email_address`, `phone_number`, and `external_account`. |
-
-## Sign-in flow
+You can build your custom sign up component using the [useSignIn](/docs/references/react/use-sign-in) hook. With the `useSignIn()` hooks you can replicate the sign in methods Clerk offers and build your own UI to handle the process.
 
 Sign-in's are initiated by creating a [`SignIn`][sign-in-ref] object on the current [`Client`][client-ref]. The [`SignIn`][sign-in-ref] handles all the state and logic associated with a sign-in. If the sign-in is successfully authenticated, it will transform into an active session on the current [`Client`][client-ref].
 
-### Completing a sign-in
+#### Completing a sign-in
 
 There are 3 main steps a user must perform in order to complete a sign-in.
 
 <Steps>
 
-### Identification
+#### Identification
 
 The first step a user needs to make is to identify what account they'd like to sign in to. This is done with an identifier, which can either be an email address, a phone number, or a username.
 
-### Factor one verification
+#### Factor one verification
 
 Once a user is identified, they need to prove their identity. This is the process of "authenticating" the user. There's a number of strategies a user can use to perform authentication with the most basic being the humble password. Other authentication strategies, like passwordless sign-in, can be explored in the [sign-in and sign-up options](/docs/authentication/configuration/sign-up-sign-in-options#authentication-strategies) guide.
 
-### Factor two verification (optional)
+#### Factor two verification (optional)
 
 This step only applies to users that have turned on two-factor authentication, also known as [multifactor authentication](/docs/custom-flows/mfa), for their user.
 
 When one form of verification isn't enough, trust two! Forcing two different verification steps vastly increases the security of your account. The most common setup a user will have to protect their account is using a password as their first kind of verification and a `phone_code` as their second kind of verification.
 
 </Steps>
+
+## Account Related Components
+
+Do you want to build your own version of the [`<UserProfile />`](/docs/components/user/user-profile) component? Do you need to create a specific component just to to allow the user to add an OAuth account? Using the [`useUser()`](/docs/references/react/use-user) amd [`useClerk()`](/docs/references/react/use-clerk) hooks you can
+
+## Organization Compponents
+
+You can creare your own custom versions of Organization components using the [`useOrganization()`](/docs/references/react/use-organization) and [`useOrganizationList()`](/docs/references/react/use-organization-list) hooks.
+
+
 
 [sign-in-ref]: /docs/references/javascript/sign-in/sign-in
 [sign-up-ref]: /docs/references/javascript/sign-up/sign-up
